--- a/src/main/resources/templates/greeting.html
+++ b/src/main/resources/templates/greeting.html
@@ -5,6 +5,6 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-    <h1><p th:text="'Hello, ' + ${name} + '!'" /></h1>
+    <h1><p th:text="'Greetings, ' + ${name} + '!'" /></h1>
 </body>
 </html>
